feat: 닉네임 입력 모달 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,3 +139,15 @@
     line-height: 14px;
   }
 }
+
+input {
+  margin: 0;
+}
+
+input:disabled {
+  cursor: not-allowed;
+}
+
+input:focus {
+  outline: none;
+}
